# rl-teamproject

./: .gitignore  README.md  atari.py  dqn.py  environments.py  remote-adv.sbatch  remote-crps.sbatch  remote-play.sbatch  remote-stenz.sbatch  requirements.txt  sb3-sweep.py  setup.cfg  train.sbatch
architectures/: ab1_lilith_strong_exp1.sh  ab1_lilith_strong_exp10.sh  ab1_lilith_strong_exp2.sh  ab1_lilith_strong_exp3.sh  ab1_lilith_strong_exp4.sh  ab1_lilith_strong_exp5.sh  ab1_lilith_strong_exp6.sh  ab1_lilith_strong_exp7.sh  ab1_lilith_strong_exp8.sh  ab1_lilith_strong_exp9.sh  ab2_nsteps_exp1.sh  ab2_nsteps_exp2.sh  ab2_nsteps_exp3.sh  ab2_nsteps_exp4.sh  ab2_nsteps_exp5.sh  ab3_exp1.sh  ab3_exp2.sh  ab3_exp3.sh  ab3_exp4.sh  ab3_exp5.sh  ab3_exp6.sh  ab4_exp1.sh  ab4_exp2.sh  ab4_exp3.sh  ab5_exp1.sh  ab5_exp2.sh  ab5_exp3.sh  ab5_exp4.sh  ab5_exp5.sh  ab6_exp1.sh  ab6_exp2.sh  ab6_exp3.sh  ab6_exp4.sh  ab6_exp5.sh  ab6_exp6.sh  train_lilith_strong.sh  train_lilith_weak.sh
baselines/: lilith_weak.json  lilith_weak.pt  stenz_29700.pth  stenz_37400.json  stenz_37400.pth
elo_eval/: elo_ab1.sh  elo_ab2.sh  elo_ab3.sh  elo_ab4.sh  elo_ab5.sh  elo_ab6.sh
environment/: .condarc  create_env.sh  environment.yml  requirements.txt
final_runs/: run1-adv.sh  run1.sh  run2-adv.sh  run2.sh  run3-adv.sh  run3.sh  run4-adv.sh  run4.sh  run5-adv-rerun.sh  run5-adv.sh  run5.sh  run6-adv.sh  run6.sh  run7-adv.sh  run7.sh  run8-adv.sh  run8.sh
ice/: agent.py  crps.py  decay.py  deploy_remote.py  dqn.py  dqn_stenz.py  elo_system.py  environments.py  evaluate.py  evaluate_runs.py  (+10 more)
(+20 files in other folders)
