[metadata]
name = dmlcloud
version = attr: dmlcloud.__version__
author = Sebastian Hoffmann
author_email = your@email.address
url = https://github.com/sehoffmann/distributed-mlcloud
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = deep learning, torch
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    dmlcloud-train = dmlcloud.cli.train:main
    dmlcloud-bench = dmlcloud.cli.bench:main
